--- a/index.css
+++ b/index.css
@@ -1,229 +1,274 @@
 @font-face {
-    font-family: "Montserrat";
-    src: url("fonts/Montserrat-VariableFont_wght.ttf");
-
+  font-family: "Montserrat";
+  src: url("fonts/Montserrat-VariableFont_wght.ttf");
 }
 
 @font-face {
-    font-family: "Unbounded";
-    src: url("fonts/Unbounded-VariableFont_wght.ttf");
-
+  font-family: "Unbounded";
+  src: url("fonts/Unbounded-VariableFont_wght.ttf");
 }
 
 .main {
-    display: flex;
-    position: relative;
-    background-color: #fff;
-
+  display: flex;
+  position: relative;
+  background-color: #fff;
 }
 
 .header {
-    width: 100%;
-    height: 100px;
-    border-bottom: 1px solid #CACACA;
-
+  border-bottom: 1px solid #cacaca;
+  padding: 50px clamp(20px, 2.5vw, 40px);
 }
 
 .title-header {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-
-    .main-title {
-        font-size: 45px;
-        color: #000;
-        font-weight: bold;
-        font-family: "Unbounded";
-    }
-
-    .main-title-bg {
-        color: #59DD59;
-    }
-
-    .main-title-sm {
-        margin-left: 10px;
-        font-size: 24px;
-        font-family: "Montserrat";
-        font-weight: 400;
-    }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
 }
 
+.main-title {
+  font-size: 45px;
+  color: #000;
+  font-weight: bold;
+  font-family: "Unbounded";
+}
+
+.main-title-bg {
+  color: #59dd59;
+}
+
+.main-title-sm {
+  font-size: 24px;
+  font-family: "Montserrat";
+  font-weight: 400;
+  box-sizing: content-box;
+  text-align: right;
+}
 
 .aside {
-    width: 250px;
-    height: 100%;
-    border-right: 1px solid #CACACA;
-    transition: width .3s ease;
+  width: 300px;
+  height: 100%;
+  border-right: 1px solid #cacaca;
+  transition: width 0.3s ease;
 
-    .container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .logo {
-        margin-top: 20px;
-        width: 200px;
-        height: 85px;
-    }
-
-    .aside__content {
-        margin-top: 20px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-
-        .aside__menu {
-            display: flex;
-            flex-direction: column;
-            gap: 41px;
-
-
-            .aside-button {
-                background-color: transparent;
-                border: none;
-                color: #949494;
-                font-family: "Montserrat";
-                font-size: 24px;
-                padding: 18px 21px;
-            }
-
-            .aside-button:hover {
-                background-color: #F8F8F8;
-                color: #59DD59;
-                border-radius: 21px;
-            }
-
-            .aside-button--active {
-                background-color: #F8F8F8;
-                color: #59DD59;
-                border-radius: 21px;
-            }
-        }
-
-        .aside__exit {
-            margin-top: 100px;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-
-            .aside-button {
-                background-color: transparent;
-                border: none;
-                color: #949494;
-                font-family: "Montserrat";
-                font-size: 24px;
-                padding: 18px 21px;
-            }
-
-            .aside-button:hover {
-                background-color: #F8F8F8;
-                color: #59DD59;
-                border-radius: 21px;
-            }
-
-            .aside-button--active {
-                background-color: #F8F8F8;
-                color: #59DD59;
-                border-radius: 21px;
-            }
-        }
-
-    }
-
-}
-
-
-.aside.collapsed {
-    width: 0;
-    padding: 0;
-    overflow: hidden;
-    border: none;
-    transition: width .3s ease;
-}
-
-
-.toggle-btn {
-    position: absolute;
-    left: 235px;
-    top: 50%;
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-    background: #ffffff;
-    border: 1px solid #CACACA;
-    cursor: pointer;
+  .container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: left .3s ease;
+  }
+
+  .logo {
+    padding: 40px 0;
+    width: 200px;
+  }
+
+  .aside__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    .aside__menu {
+      display: flex;
+      flex-direction: column;
+      gap: 30px;
+
+      .aside-button {
+        background-color: transparent;
+        border: none;
+        color: #949494;
+        font-family: "Montserrat";
+        font-size: 24px;
+        padding: 18px 21px;
+        transition: 0.3s all;
+      }
+
+      .aside-button:hover {
+        background-color: #f8f8f8;
+        color: #59dd59;
+        border-radius: 21px;
+      }
+
+      .aside-button--active {
+        background-color: #f8f8f8;
+        color: #59dd59;
+        border-radius: 21px;
+      }
+    }
+
+    .aside__exit {
+      margin-top: 100px;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+
+      .aside-button {
+        background-color: transparent;
+        border: none;
+        color: #949494;
+        font-family: "Montserrat";
+        font-size: 24px;
+        padding: 18px 21px;
+      }
+
+      .aside-button:hover {
+        background-color: #f8f8f8;
+        color: #59dd59;
+        border-radius: 21px;
+      }
+
+      .aside-button--active {
+        background-color: #f8f8f8;
+        color: #59dd59;
+        border-radius: 21px;
+      }
+    }
+  }
 }
 
+.aside.collapsed {
+  width: 0;
+  padding: 0;
+  overflow: hidden;
+  border: none;
+  transition: width 0.3s ease;
+}
+
+.toggle-btn {
+  position: absolute;
+  left: 284px;
+  top: 50%;
+  width: 32px;
+  height: 32px;
+  border-radius: 50%;
+  background: #ffffff;
+  border: 1px solid #cacaca;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  transition: left 0.3s ease;
+  z-index: 10;
+  transition: 0.3s all;
+}
 
 .toggle-btn::before {
-    content: "◀";
-    font-size: 18px;
-    color: #59DD59;
+  content: "◀";
+  font-size: 18px;
+  margin-right: 2px;
+  color: #59dd59;
 }
 
-
 .aside.collapsed + .toggle-btn {
-    left: 10px;
+  left: 10px;
 }
 
 .aside.collapsed + .toggle-btn::before {
-    content: "▶";
+  content: "▶";
+  margin-left: 5px;
 }
 
+.toggle-btn:hover {
+  background: #000000;
+  box-shadow: 0 0 5px #0c976983;
+  transform: scale(120%);
+}
 
 .access__content {
-    flex: 1;
-    padding: 40px;
+  flex: 1;
+  padding: 60px 0;
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
 
+  .access-title {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #000;
+    font-family: "Unbounded";
+    font-size: 36px;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 100px;
 
-    .access-title {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        color: #000;
-        font-family: "Unbounded";
-        font-size: 36px;
-        font-weight: 400;
-        text-align: center;
-        margin-bottom: 100px;
+    span {
+      color: #59dd59;
+    }
+  }
 
-        span {
-            color: #59DD59;
-        }
+  .gn {
+    position: absolute;
+    z-index: -1;
+    width: 100%;
+    transform: rotate(90deg);
+    top: -800px;
+    right: 0;
+    filter: blur(5px) brightness(0.96);
+  }
+
+  .access__cards {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 55px;
+
+    .access__card {
+      padding: 130px 80px;
+      border: 1px solid #cacaca;
+      border-radius: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      transition: 0.4s all;
+
+      img {
+        width: 80px;
+        height: 80px;
+      }
     }
 
-    .access__cards {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        gap: 55px;
-
-        .access__card {
-            padding: 130px 80px;
-            border: 1px solid #CACACA;
-            border-radius: 10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-
-            img {
-                width: 80px;
-                height: 80px;
-            }
-        }
-
-        .access__card:hover {
-            transform: translateY(-8px) ;
-            box-shadow: 0 10px 25px rgba(89, 221, 89, 0.35);
-            cursor: pointer;
-        }
+    .access__card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 5px 25px rgba(89, 221, 129, 0.35);
+      cursor: pointer;
     }
+  }
 }
 
+.ai-box {
+  margin-top: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.ai {
+  cursor: pointer;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  box-shadow: 0px 4px 12px #09944f44, inset 0px 4px 8px rgb(255, 255, 255);
+  animation: 2s ease-in-out 0s infinite alternate scaleSize;
+  transition: 0.4s all;
+}
+
+@keyframes scaleSize {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.2);
+  }
+}
+
+.ai:hover {
+  scale: 120%;
+}
